# aicheck-main

./: .gitignore  Cargo.toml  Makefile  README.md  RELEASE.md  USAGE_GUIDE.md  quick-start.ps1  quick-start.sh
.github/workflows/: ci.yml  release.yml
aicheck-main/: .dockerignore  .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  INSTALL_RUST_ZH.md  README.md  START_HERE_ZH.md  docker-compose.yml  down.sh  install-rust.ps1  up.ps1  up.sh
aicheck-main/.github/workflows/: ci.yml  release.yml
aicheck-main/benches/: signature_bench.rs
aicheck-main/crates/aidoc-core/: Cargo.toml
aicheck-main/crates/aidoc-core/src/: lib.rs  model.rs
aicheck-main/crates/aidoc-output/: Cargo.toml
aicheck-main/crates/aidoc-redact/src/: lib.rs
aicheck-main/crates/aidoc-sandbox/src/: lib.rs
aicheck-main/crates/aidoc-signatures/: Cargo.toml
crates/aidoc-cli/: Cargo.toml
crates/aidoc-cli/src/: main.rs
crates/aidoc-core/src/: normalize.rs  pipeline.rs
crates/aidoc-llm/: Cargo.toml
crates/aidoc-llm/src/: lib.rs
crates/aidoc-output/src/: lib.rs
crates/aidoc-probes/: Cargo.toml
crates/aidoc-probes/src/: lib.rs
crates/aidoc-redact/: Cargo.toml
crates/aidoc-sandbox/: Cargo.toml
crates/aidoc-signatures/src/: lib.rs
npm/: install.js  package.json
