[workspace]
members = [
  "crates/aidoc-cli",
  "crates/aidoc-core",
  "crates/aidoc-redact",
  "crates/aidoc-signatures",
  "crates/aidoc-output",
  "crates/aidoc-sandbox",
  "crates/aidoc-probes",
  "crates/aidoc-llm",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "2.0.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.11.3"
once_cell = "1.21.3"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.48", features = ["derive"] }
wait-timeout = "0.2.1"
libc = "0.2.176"
async-trait = "0.1.89"
futures = "0.3.31"
criterion = "0.5"
