[package]
name = "aidoc-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aidoc-core = { path = "../aidoc-core" }
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8.23"

[dev-dependencies]
futures.workspace = true
